test/should-fail/code不能有参数.warn
转为code的函数[test]不能有任何参数。